Fix spacing

--- a/assets/sass/_language.scss
+++ b/assets/sass/_language.scss
@@ -6,6 +6,7 @@
     display: inline-block;
     background-color: $theme-color;
     padding: 2px 10px 5px 10px;
+    margin-right: 4px;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     font-weight: 900;
